# wordgrinder

./: .gitignore  Makefile  build.py  config.py  meson.build  wordgrinder.man
extras/: build.py
src/c/: build.py  clipboard.cc  filesystem.cc  globals.h  lua.cc  main.cc  meson.build  screen.cc  utils.cc
src/lua/: _prologue.lua  forms.lua  meson.build
subprojects/: .gitignore  cmark.wrap  luau.wrap  minizip.wrap
subprojects/cmark/src/: CMakeLists.txt
subprojects/luau/: CMakeLists.txt
subprojects/minizip/: CMakeLists.txt
subprojects/packagefiles/: cmark-cmake-hack.patch  luau-compiler-hack.patch  minizip-cmake-hack.patch
tests/: meson.build
tools/: meson.build  multibin2c.sh  typechecker.cc
