script_table = custom_target(
  input : [
    '../../tools/multibin2c.sh',
    '../../build/_objectify.py',
    '_prologue.lua',
    'objects.lua',
    'events.lua',
    'margin.lua',
    'main.lua',
    'xml.lua',
    'utils.lua',
    'redraw.lua',
    'settings.lua',
    'document.lua',
    'documentset.lua',
    'paragraph.lua',
    'forms.lua',
    'ui.lua',
    'browser.lua',
    'html.lua',
    'xpattern.lua',
    'fileio.lua',
    'export.lua',
    'export/text.lua',
    'export/html.lua',
    'export/latex.lua',
    'export/troff.lua',
    'export/opendocument.lua',
    'export/org.lua',
    'export/markdown.lua',
    'import.lua',
    'import/html.lua',
    'import/text.lua',
    'import/opendocument.lua',
    'import/markdown.lua',
    'navigate.lua',
    'addons/goto.lua',
    'addons/autosave.lua',
    'addons/docsetman.lua',
    'addons/gui.lua',
    'addons/scrapbook.lua',
    'addons/statusbar_charstyle.lua',
    'addons/statusbar_pagecount.lua',
    'addons/statusbar_position.lua',
    'addons/statusbar_wordcount.lua',
    'addons/debug.lua',
    'addons/look-and-feel.lua',
    'addons/keymapoverride.lua',
    'addons/smartquotes.lua',
    'addons/undo.lua',
    'addons/spillchocker.lua',
    'addons/templates.lua',
    'addons/directories.lua',
    'addons/recents.lua',
    'colours.lua',
    'menu.lua',
    'cli.lua',
  ],
  output : 'script_table.h',
  command : ['sh', '@INPUT0@', '@OUTPUT@', '@INPUT@']
)
